--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,28 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="dehaan.kdehaan_countbook.MainActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical" >
+
+
+    <ListView
+        android:id="@+id/CounterList"
+        android:layout_width="fill_parent"
+        android:layout_height="263dp"
+        android:layout_weight="1"
+        android:scrollbars="vertical" >
+
+    </ListView>
+
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/num_counter"
-        tools:layout_editor_absoluteY="430dp"
+        android:gravity="center_vertical|right"
         android:layout_marginRight="26dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        android:text="@string/num_counter" />
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginRight="16dp"
-        android:text="@string/new_counter"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
-</android.support.constraint.ConstraintLayout>
+        android:id="@+id/createCounter"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/new_counter" />
+
+
+
+</LinearLayout>
+
+<!--
+<TextView
+android:id="@+id/textView"
+android:layout_width="0dp"
+android:layout_height="wrap_content"
+android:text="@string/num_counter"
+android:layout_marginRight="26dp"
+android:layout_marginBottom="64dp" />
+
+<Button
+android:id="@+id/button"
+android:layout_width="wrap_content"
+android:layout_height="0dp"
+android:layout_marginBottom="16dp"
+android:layout_marginRight="16dp"
+android:text="@string/new_counter"
+app:layout_constraintBottom_toBottomOf="parent"
+app:layout_constraintRight_toRightOf="parent" />-->
+
+
+
