LonelyTwitter style version

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,11 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/new_counter" />
+    <Button
+        android:id="@+id/clearCounters"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Remove All" />
 
 
 
