--- a/app/src/main/res/layout/activity_create_counter.xml
+++ b/app/src/main/res/layout/activity_create_counter.xml
@@ -18,7 +18,7 @@
         app:layout_constraintHorizontal_bias="0.049" />
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/editComment"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -28,10 +28,10 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/button"
-        app:layout_constraintTop_toBottomOf="@+id/editText2" />
+        app:layout_constraintTop_toBottomOf="@+id/editInitVal" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/editInitVal"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -40,11 +40,11 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/editText3"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintBottom_toTopOf="@+id/editComment"
+        app:layout_constraintTop_toBottomOf="@+id/editName" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/editName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -53,7 +53,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/editText2"
+        app:layout_constraintBottom_toTopOf="@+id/editInitVal"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
@@ -65,6 +65,6 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText3" />
+        app:layout_constraintTop_toBottomOf="@+id/editComment" />
 
 </android.support.constraint.ConstraintLayout>
