--- a/app/src/main/res/xml/pref_headers.xml
+++ b/app/src/main/res/xml/pref_headers.xml
@@ -3,17 +3,17 @@
     <!-- These settings headers are only used on tablets. -->
 
     <header
-        android:fragment="dehaan.kdehaan_countbook.createCounterActivity$GeneralPreferenceFragment"
+        android:fragment="dehaan.kdehaan_countbook.editCounterActivity$GeneralPreferenceFragment"
         android:icon="@drawable/ic_info_black_24dp"
         android:title="@string/pref_header_general" />
 
     <header
-        android:fragment="dehaan.kdehaan_countbook.createCounterActivity$NotificationPreferenceFragment"
+        android:fragment="dehaan.kdehaan_countbook.editCounterActivity$NotificationPreferenceFragment"
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/pref_header_notifications" />
 
     <header
-        android:fragment="dehaan.kdehaan_countbook.createCounterActivity$DataSyncPreferenceFragment"
+        android:fragment="dehaan.kdehaan_countbook.editCounterActivity$DataSyncPreferenceFragment"
         android:icon="@drawable/ic_sync_black_24dp"
         android:title="@string/pref_header_data_sync" />
 
