--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,12 +25,12 @@
         android:gravity="center_vertical|right"
         android:layout_marginRight="26dp"
         android:text="@string/num_counter" />
-    <Button
-        android:id="@+id/newCounter"
-        android:onClick="addCounter"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/new_counter" />
+    <!--<Button-->
+        <!--android:id="@+id/newCounter"-->
+        <!--android:onClick="addCounter"-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="@string/new_counter" />-->
     <Button
         android:id="@+id/createCounter"
         android:layout_width="fill_parent"
