--- a/app/src/main/res/layout/activity_edit_counter.xml
+++ b/app/src/main/res/layout/activity_edit_counter.xml
@@ -7,7 +7,7 @@
     tools:context="dehaan.kdehaan_countbook.MainActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/counterQuantity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -67,7 +67,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/editName"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/counterQuantity" />
 
     <Button
         android:id="@+id/button"
