--- a/app/src/main/res/layout/activity_edit_counter.xml
+++ b/app/src/main/res/layout/activity_edit_counter.xml
@@ -170,4 +170,14 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="16dp" />
 
+    <TextView
+        android:id="@+id/dateText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Created on"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/editComment" />
+
 </android.support.constraint.ConstraintLayout>
