--- a/app/src/main/res/layout/activity_edit_counter.xml
+++ b/app/src/main/res/layout/activity_edit_counter.xml
@@ -79,7 +79,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/confirm_changes"
-        android:onClick="confirmChangeCounter"
+        android:onClick="confirmCounter"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editComment"
