--- a/app/src/main/res/layout/activity_create_counter.xml
+++ b/app/src/main/res/layout/activity_create_counter.xml
@@ -55,7 +55,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/new_counter"
-        android:onClick="confirmNewCounter"
+        android:onClick="confirmCounter"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
