--- a/app/src/main/res/layout/activity_create_counter.xml
+++ b/app/src/main/res/layout/activity_create_counter.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/hint_initVal"
-        android:inputType="textPersonName"
+        android:inputType="number"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
